--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,30 +9,33 @@ services:
     restart: unless-stopped
     working_dir: /var/www
     volumes:
-      - .:/var/www
+      - ./storage:/var/www/storage
+      - ./database:/var/www/database
+      - .env:/var/www/.env
     networks:
       - laravel
     environment:
-      - "PYTHONUNBUFFERED=1" # Dành cho logging
+      - "App_ENV=local"
     depends_on:
       - mysql
 
   nginx:
-    image: nginx:alpine
+    build:
+      context: .
+      dockerfile: docker/nginx/Dockerfile
     container_name: laravel_nginx
     restart: unless-stopped
     ports:
       - "8080:80"
     volumes:
-      - .:/var/www
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./storage/app/public:/var/www/public/storage
     networks:
       - laravel
     depends_on:
       - app
 
   mysql:
-    image: mysql:8.0
+    image: mysql:8.0  
     container_name: laravel_mysql
     restart: unless-stopped
     environment:
@@ -40,8 +43,6 @@ services:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_PASSWORD: password
       MYSQL_USER: laravel
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql
     ports:
       - "3306:3306"
     volumes:
