--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -7,16 +7,20 @@ server {
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
     }
 
     location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        # 'app' is the service name in docker-compose
         fastcgi_pass app:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    # Optional: Cache static files
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires max;
+        log_not_found off;
     }
 }
