--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
-        "animejs": "^4.2.2"
+        "animejs": "^4.2.2",
+        "gsap": "^3.12.5",
+        "lenis": "^1.0.42",
+        "swiper": "^11.0.0"
     }
 }
